[tool.poetry]
name = "streamlit-tutorial"
version = "0.1.0"
description = ""
authors = ["'Myxogastria0808' <r.rstudio.c@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.31.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
